fix: header-overflow-problem

--- a/public/css/board.css
+++ b/public/css/board.css
@@ -4,6 +4,8 @@
 
   padding-top: 100px;
   padding-left: 100px;
+
+  overflow: auto;
 }
 
 #board {
